<resources>
    <string name="app_name">ShoesWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_agregar">Agregar</string>
    <string name="menu_productos">Productos en stock</string>
    <string name="menu_busqueda">Buscar</string>
    <string name="menu_creditos">Informacion</string>
    <string name="menu_inactivos">Productos agotados</string>
    <string name="menu_bienvenido">Bienvenid@</string>
    <string name="prueba2">eve 2</string>
    <string name="pruebados">eve2 2</string>

    //Producto
    <string name="imagenproducto">Imagen del producto</string>
    <string name="idproducto">Id del producto</string>
    <string name="marcaproducto">Marca del producto</string>
    <string name="modeloproducto">Modelo del producto</string>
    <string name="tallaproducto">Talla</string>
    <string name="colorproducto">Color</string>
    <string name="precioproducto">Precio del producto</string>
    <string name="cantidadproducto">Existencia</string>
    <string name="stockproducto">Stock</string>
    <string name="categoriaproducto">Categoria</string>
    <string name="statusproducto">Status</string>


    //Creditos
    <string name="nombre_app">Shoes World</string>
    <string name="nombre_uni">Instituto Tecnológico de Toluca</string>
    <string name="nombre_lu">García Saavedra América Lucero</string>
    <string name="nombre_eve">Sanjurjo García Evelyn</string>
    <string name="nombre_naye">Zamora Hernández Cinthya Nayeli</string>
    <string name="nombre_materia">Desarrollo Móvil</string>
    <string name="nombre_profa">Pulido Alba Rocio Elizabeth</string>
    <string name="version">Version 1.0</string>

    //Arrays
    <string-array name="status">
        <item>Seleccionar status</item>
        <item>ACTIVO</item>
        <item>INACTIVO</item>
    </string-array>

    <string-array name="marcas">
        <item>Seleccionar marca</item>
        <item>NIKE</item>
        <item>JORDAN</item>
        <item>ANDREA</item>
        <item>CONVERSE</item>
        <item>FLEXI</item>
    </string-array>

    <string-array name="categorias">
        <item>Seleccionar categoria</item>
        <item>DEPORTIVO</item>
        <item>CASUAL</item>
        <item>ELEGANTE</item>
    </string-array>

    <string-array name="colores">
        <item>Seleccionar color</item>
        <item>NEGRO</item>
        <item>BLANCO</item>
        <item>CAFE</item>
        <item>AZUL</item>
        <item>ROJO</item>
        <item>ROSA</item>
    </string-array>

    <string-array name="tallas">
        <item>Seleccionar talla</item>
        <item>20</item>
        <item>20.5</item>
        <item>21</item>
        <item>21.5</item>
        <item>22</item>
        <item>22.5</item>
        <item>23</item>
        <item>23.5</item>
        <item>24</item>
        <item>24.5</item>
        <item>25</item>
        <item>25.5</item>
        <item>26</item>
        <item>26.5</item>
        <item>27</item>
        <item>27.5</item>
        <item>28</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    //login
    <string name="saludo">Bienvenido</string>
    <string name="correo">Ingresa tu correo electrónico</string>
    <string name="pass">Ingresa tu contraseña</string>
    <string name="ingresar">Iniciar sesión</string>
    <string name="registro">¿No tienes cuenta? regístrate aquí</string>
    <string name="btnregis">Registro</string>
    <string name="nombre">Ingresa tu nombre</string>


</resources>