<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_agregar"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/menu_agregar" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/menu_productos" />

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_buscar"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="Editar" />
            <item
                android:id="@+id/nav_inactivos"
                android:icon="@android:drawable/presence_busy"
                android:title="@string/menu_inactivos" />

        </group>

        <item
            android:id="@+id/nav_creditos"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_creditos" />

    </group>
</menu>