<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.creditos.CreditosFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imagenproducto"
                android:src="@drawable/logo_sw"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_uni"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/primaryDarkColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_materia"
                android:textSize="20dp"
                android:textColor="@color/primaryColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_lu"
                android:textSize="20dp"
                android:textColor="@color/primaryColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_eve"
                android:textSize="20dp"
                android:textColor="@color/primaryColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_naye"
                android:textSize="20dp"
                android:textColor="@color/primaryColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_profa"
                android:textSize="20dp"
                android:textColor="@color/primaryColor"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_app"
                android:textSize="30dp"
                android:textColor="@color/primaryDarkColor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/version"
                android:textSize="20dp"
                android:textColor="@color/primaryColor"
                />


        </LinearLayout>
    </ScrollView>

</FrameLayout>