<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center_horizontal"
            android:text="@string/btnregis"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

        <EditText

            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:elevation="5dp"
            android:fontFamily="@font/poppins_light"
            android:shadowColor="@color/primaryColor"
            android:text="@string/btnregis"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_baseline_person_add_24"
            app:iconTint="@color/primaryTextColor"></Button>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>